POC: off-heap hash map